// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create a failure action to load Orgs page 1`] = `
Object {
  "payload": Object {
    "err": [Error],
  },
  "type": "LOAD_ORGS_PAGE_FAILURE",
}
`;

exports[`should create a failure action to load Top page 1`] = `
Object {
  "payload": Object {
    "err": [Error],
  },
  "type": "LOAD_TOP_PAGE_FAILURE",
}
`;

exports[`should create a failure action to load app process 1`] = `
Object {
  "err": [Error],
  "type": "LOAD_APP_PROCESS_FAILURE",
}
`;

exports[`should create a success action to load Orgs page 1`] = `
Object {
  "type": "LOAD_ORGS_PAGE_SUCCESS",
}
`;

exports[`should create a success action to load Top page 1`] = `
Object {
  "type": "LOAD_TOP_PAGE_SUCCESS",
}
`;

exports[`should create a success action to load app process 1`] = `
Object {
  "type": "LOAD_APP_PROCESS_SUCCESS",
}
`;

exports[`should create an action to load Orgs page 1`] = `
Object {
  "payload": Object {
    "org": "foo",
  },
  "type": "LOAD_ORGS_PAGE",
}
`;

exports[`should create an action to load Top page 1`] = `
Object {
  "type": "LOAD_TOP_PAGE",
}
`;

exports[`should create an action to load app process 1`] = `
Object {
  "type": "LOAD_APP_PROCESS",
}
`;

exports[`should create an action to reset state 1`] = `
Object {
  "type": "RESET_PAGES_STATUS",
}
`;

exports[`should create an action to stop saga 1`] = `
Object {
  "type": "STOP_SAGA",
}
`;
